Fixed CSS so tweets in open-modal won’t be too wide when blurred_modals are enabled

--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -93,6 +93,14 @@
 		max-width: none;
 	}
 
+	#open-modal .med-tweet {
+		left: 50%;
+		right: 0;
+		max-width: 512px;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+
 	.ovl, .overlay {
 		background-color: rgba(black,.9);
 	}
